    (LP: #1047275).

  [ Dmitrijs Ledkovs ]
  * Revert test string, to a user friendly one as it is visible in the UI.

  [ Colin Watson ]
  * Remove a couple of vestiges of migration-assistant.
  * Catch OverflowError as well as ValueError from datetime functions, for
    forward-compatibility with Python 3.3.
  * Use importlib rather than __import__.

 -- Colin Watson <cjwatson@ubuntu.com>  Sat, 08 Sep 2012 12:05:56 +0100

ubiquity (2.11.31) quantal; urgency=low

  [ Colin Watson ]
  * Buffer reads from debconf-copydb.  Python 3 defaults to unbuffered reads
    from byte streams, which is much slower.
  * Port oem-config-remove-gtk to Python 3, now that
    python3-aptdaemon.gtk3widgets exists; the final piece!
  * Remove Python 2 support.  We aren't going back now.
  * Remove the rest of the long-dead PS3 port.

  [ Dmitrijs Ledkovs ]
  * Allow going from the encryption key setup page, to the disk space
    allocation page. (LP: #1046323)
  * Correctly apply styles to the title & progress sections and not the
    centre piece. This means themes are no longer required to provide non
    standard @dark_[fb]g_color colors, instead 'menubar' Gtk CSS style is
    used. This also fixes long standing a11y issues in HighContrast themes
    & requirements for non-standard color definitions. (LP: #744283)
  * Make lables in the segmented bar use the same colours as normal labels.
  * Changing the "Add/Remove/Change Partiontion" buttons to mixed
    symbolic/text buttons should make the screen comply with Ubiquity
    Design spec ( http://goo.gl/Kokw5 ) and address confusion about the
    updated screen. (LP: #1045799)
  * Fix the disappearance of crypto password field (LP: #1045716)
  * Fix misallignment of crypto password fields (LP: #1045712)
  * Make setup security key page go back to ask page (LP: #1045698)
  * Remove powerpc/ps3 low-memory profile, as it doesn't do anything any
    more. gnome-session-remove command is no longer present, and the init