@@ -13,6 +13,11 @@ ubiquity (2.11.32) UNRELEASED; urgency=low
     forward-compatibility with Python 3.3.
   * Use importlib rather than __import__.
 
+  [ Jonathan Riddell ]
+  * ubiquity/plugins/ubi-partman.py and
+    ubiquity/frontend/kde_components/PartAuto.py
+   - add options for LUKS and LVM automatic partitioning to KDE frontend
+
  -- Colin Watson <cjwatson@ubuntu.com>  Sat, 08 Sep 2012 12:05:56 +0100
 
 ubiquity (2.11.31) quantal; urgency=low
